--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -33,7 +33,7 @@
             </div>
             <div>
                 <label>Email</label>
-                <input type="email" name="email" required>
+                <input type="email" name="email">
             </div>
             <button type="submit">Login / Signup</button>
         </form>
